<resources>
    <string name="app_name">Khaana Kart</string>
    <string name="primary_logo_desc">Primary Application Logo</string>
    <string name="secondary_logo_desc">Secondary Application Logo</string>
    <string name="notification_logo_desc">Notification Logo</string>
    <string name="app_slogan">Fresh Flavors, Fast</string>
    <string name="app_designed_by_text">Developed by \n Arghadeep</string>
    <string name="app_tag_line">Taste the Tradition,\nDelivered with Care</string>
    <string name="start_screen_next_button">Next</string>
    <string name="or_text">Or</string>
    <string name="continue_with_text">Continue With</string>
    <string name="sign_up_with_text">Sign Up With</string>
    <string name="sign_up_here_text">Sign Up Here</string>
    <string name="login_to_account_text">Login To Your Account</string>
    <string name="password_text_field_hint">Password</string>
    <string name="email_or_phone_text_field_hint">Email or Phone Number</string>
    <string name="name_text_field_hint">Full Name</string>
    <string name="location_text_field_hint">Location</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="do_not_have_account_text">Don\'t have account?</string>
    <string name="already_have_account_text">Already have an account?</string>
    <string name="choose_location_text">Choose Your Location</string>
    <string name="auto_complete_placeholder">-- Select --</string>
    <string name="location_access_message">** Please select your location from the dropdown menu. This app does not access your device\'s GPS.</string>
    <string name="home_bottom_nav_item">Home</string>
    <string name="cart_bottom_nav_item">Cart</string>
    <string name="search_bottom_nav_item">Search</string>
    <string name="history_bottom_nav_item">History</string>
    <string name="profile_bottom_nav_item">Profile</string>
    <string name="explore_food_text">Explore Your Favorite Food</string>
    <string name="popular_text_home">Popular</string>
    <string name="view_menu_text">View Menu</string>
    <string name="add_to_cart_button_text">Add To Cart</string>
    <string name="placeholder_string_text">Placeholder Text</string>
    <string name="placeholder_double_text">17.99</string>
    <string name="placeholder_int_text">17</string>
    <string name="placeholder_image_desc">Placeholder Image</string>
    <string name="proceed_button_text">Proceed</string>
    <string name="menu_screen_title_text">Menu</string>
    <string name="notifications_screen_title_text">Notifications</string>
    <string name="checkout_screen_title_text">Checkout</string>
    <string name="recent_buy_text">Recent Buy</string>
    <string name="prev_bought_text">Previously Bought</string>
    <string name="buy_again_button_text">Buy Again</string>
    <string name="received_button_text">Received</string>
    <string name="profile_name_text">Name</string>
    <string name="profile_address_text">Address</string>
    <string name="profile_email_text">Email</string>
    <string name="profile_phone_text">Phone</string>
    <string name="placeholder_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="edit_text_content_desc">Edit Text</string>
    <string name="save_information_button_text">Save Information</string>
    <string name="checkout_payment_mode_text">Payment Mode</string>
    <string name="cod_payment_mode_text">Cash On Delivery</string>
    <string name="total_amount_text">Total Amount</string>
    <string name="place_order_button_text">Place Order</string>
    <string name="order_placed_success_text">Congrats! Your order is placed.</string>
    <string name="go_home_button_text">Go Home</string>
    <string name="short_desc_title_text">Short Description</string>
    <string name="ingredients_title_text">Ingredients</string>
    <string name="category_title_text">Category</string>
    <string name="cuisine_title_text">Cuisine</string>
    <string name="calories_title_text">Calories</string>
    <string name="history_title_text">History</string>
</resources>