<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home_bottom_nav_item"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/cartFragment"
        android:title="@string/cart_bottom_nav_item"
        android:icon="@drawable/cart"/>
    <item
        android:id="@+id/searchFragment"
        android:title="@string/search_bottom_nav_item"
        android:icon="@drawable/search"/>
    <item
        android:id="@+id/historyFragment"
        android:title="@string/history_bottom_nav_item"
        android:icon="@drawable/history"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile_bottom_nav_item"
        android:icon="@drawable/person"/>
</menu>